--- a/package.json
+++ b/package.json
@@ -15,33 +15,33 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/crow-rest/cargo-prebuilt-action.git"
+    "url": "git+https://github.com/cargo-prebuilt/cargo-prebuilt-action.git"
   },
   "keywords": [
     "actions",
     "node",
     "setup"
   ],
-  "author": "harmless-tech, crow-rest",
+  "author": "harmless-tech, cargo-prebuilt",
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
     "@actions/http-client": "^2.1.0",
-    "@actions/io": "^1.1.2",
+    "@actions/io": "^1.1.3",
     "@actions/tool-cache": "^2.0.1"
   },
   "devDependencies": {
-    "@types/node": "^18.15.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@types/node": "^18.15.11",
+    "@typescript-eslint/parser": "^5.57.1",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.36.0",
-    "eslint-plugin-github": "^4.6.1",
+    "eslint": "^8.38.0",
+    "eslint-plugin-github": "^4.7.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
     "js-yaml": "^4.1.0",
-    "prettier": "2.8.4",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.4"
+    "prettier": "2.8.7",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4"
   }
 }
