--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -28,13 +28,27 @@ jobs:
         with:
           node-version: 16.x
 
-      - name: Install dependencies
-        run: npm ci
+      - uses: pnpm/action-setup@v2
+        with:
+          version: ${{ env.PNPM_VERSION }}
+          run_install: false
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        run: echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
+      - uses: actions/cache@v3
+        name: Setup pnpm cache
+        with:
+          path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+      - name: Install Deps
+        run: pnpm install
 
       - name: Rebuild the dist/ directory
         run: |
-          npm run build
-          npm run package
+          pnpm run build
+          pnpm run package
 
       - name: Compare the expected and actual dist/ directories
         run: |
