--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "install-cargo-prebuilt-action",
-  "version": "1.7.0",
+  "version": "1.8.0",
   "private": true,
-  "description": "Install cargo prebuilt to a runner",
+  "description": "Install cargo prebuilt to a runner.",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -11,7 +11,7 @@
     "lint": "eslint src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test"
   },
   "repository": {
     "type": "git",
@@ -30,16 +30,17 @@
     "@actions/tool-cache": "^2.0.1"
   },
   "devDependencies": {
-    "@types/node": "^18.15.11",
-    "@typescript-eslint/parser": "^5.58.0",
+    "@jest/globals": "^29.5.0",
+    "@types/node": "^20.2.5",
+    "@typescript-eslint/parser": "^5.59.9",
     "@vercel/ncc": "^0.36.1",
-    "eslint": "^8.38.0",
-    "eslint-plugin-github": "^4.7.0",
+    "eslint": "^8.42.0",
+    "eslint-plugin-github": "^4.8.0",
     "eslint-plugin-jest": "^27.2.1",
     "jest": "^29.5.0",
     "js-yaml": "^4.1.0",
-    "prettier": "2.8.7",
+    "prettier": "2.8.8",
     "ts-jest": "^29.1.0",
-    "typescript": "^5.0.4"
+    "typescript": "^5.1.3"
   }
 }
