--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,14 @@
 name: 'build-test'
+
 on: # rebuild any PRs and main branch changes
   pull_request:
   push:
     branches:
       - main
       - 'releases/*'
+
+env:
+  PNPM_VERSION: 8.5
 
 jobs:
   build: # make sure build/ci work properly
