--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -17,7 +17,7 @@ on:
   workflow_dispatch:
 
 env:
-  PNPM_VERSION: 8.5    
+  PNPM_VERSION: latest   
 
 jobs:
   check-dist:
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Set Node.js 16.x
-        uses: actions/setup-node@v3.6.0
+        uses: actions/setup-node@v3.7.0
         with:
           node-version: 16.x
 
