--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ on: # rebuild any PRs and main branch changes
       - 'releases/*'
 
 env:
-  PNPM_VERSION: 8.5
+  PNPM_VERSION: latest
 
 jobs:
   build: # make sure build/ci work properly
