--- a/action.yml
+++ b/action.yml
@@ -52,9 +52,9 @@ inputs:
     default: ''
 outputs:
   prebuilt-version:
-    description: 'Prebuilt version that was installed'
+    description: 'Cargo prebuilt version that was installed'
   prebuilt-target:
-    description: 'Prebuilt target that was installed'
+    description: 'Cargo prebuilt target that was installed'
   out:
     description: 'Stdout of cargo-prebuilt if it downloaded any tools'
 runs:
