Fix prebuilt-verify description

--- a/action.yml
+++ b/action.yml
@@ -16,7 +16,7 @@ inputs:
   prebuilt-verify:
     required: true
     description: 'Verify downloaded cargo prebuilt'
-    default: 'false'
+    default: 'none'
   pkgs:
     description: 'A CSV list of prebuilt crates needed with optional version numbers (see cargo-prebuilt cli)'
     default: ''
