--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -70,6 +70,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
+          out: false
           pkgs: just,rtx-cli@1.34.0,bacon@2.11.0
       - run: just --version
       - run: which just
@@ -81,6 +82,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
+          out: false
           pkgs: just,rtx-cli@1.34.0,bacon@2.11.0
       - run: just --version
       - run: which just
@@ -92,6 +94,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
+          out: false
           pkgs: just,bacon@2.11.0
       - shell: bash
         run: just --version
@@ -104,10 +107,12 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./
         with:
+          out: false
           pkgs: just@1.14.0
       - run: "[[ \"$(just --version)\" == \"just 1.14.0\" ]]"
       - uses: ./
         with:
+          out: false
           pkgs: just@1.14.0
       - run: "[[ \"$(just --version)\" == \"just 1.14.0\" ]]"
       - run: which just
