--- a/package.json
+++ b/package.json
@@ -1,45 +1,88 @@
 {
   "name": "install-cargo-prebuilt-action",
-  "version": "3.1.3",
-  "private": true,
   "description": "Install cargo prebuilt to a runner.",
-  "main": "lib/main.js",
-  "scripts": {
-    "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
-    "format-check": "prettier --check '**/*.ts'",
-    "lint": "eslint src/**/*.ts",
-    "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "pnpm run build && pnpm run format && pnpm run lint && pnpm run package && pnpm test"
-  },
+  "version": "3.2.0",
+  "author": "harmless-tech, cargo-prebuilt",
+  "private": true,
+  "homepage": "https://github.com/cargo-prebuilt/cargo-prebuilt-action",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/cargo-prebuilt/cargo-prebuilt-action.git"
+  },
+  "bugs": {
+    "url": "https://github.com/cargo-prebuilt/cargo-prebuilt-action/issues"
   },
   "keywords": [
     "actions",
     "node",
     "setup"
   ],
-  "author": "harmless-tech, cargo-prebuilt",
+  "exports": {
+    ".": "./dist/index.js"
+  },
+  "engines": {
+    "node": ">=20"
+  },
+  "scripts": {
+    "bundle": "pnpm run format:write && pnpm run package",
+    "format:write": "prettier --write '**/*.ts'",
+    "format:check": "prettier --check '**/*.ts'",
+    "lint": "eslint . -c ./.github/linters/.eslintrc.yml",
+    "package": "ncc build src/index.ts --license licenses.txt",
+    "test": "jest",
+    "all": "pnpm run format:write && pnpm run lint && pnpm run test && pnpm run package"
+  },
   "license": "MIT",
+  "jest": {
+    "preset": "ts-jest",
+    "verbose": true,
+    "clearMocks": true,
+    "testEnvironment": "node",
+    "moduleFileExtensions": [
+      "js",
+      "ts"
+    ],
+    "testMatch": [
+      "**/*.test.ts"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/dist/"
+    ],
+    "transform": {
+      "^.+\\.ts$": "ts-jest"
+    },
+    "coverageReporters": [
+      "json-summary",
+      "text",
+      "lcov"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "./src/**"
+    ]
+  },
   "dependencies": {
     "@actions/core": "^1.10.1",
     "@actions/exec": "^1.1.1",
-    "@actions/tool-cache": "^2.0.1"
+    "@actions/tool-cache": "^2.0.1",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@jest/globals": "^29.7.0",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.11.20",
+    "@types/uuid": "^9.0.8",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^8.57.0",
     "eslint-plugin-github": "^4.10.1",
     "eslint-plugin-jest": "^27.9.0",
+    "eslint-plugin-jsonc": "^2.13.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "js-yaml": "^4.1.0",
     "prettier": "3.2.5",
+    "prettier-eslint": "^16.3.0",
     "ts-jest": "^29.1.2",
     "typescript": "^5.3.3"
   }
