--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.20",
     "@types/uuid": "^9.0.8",
