--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "install-cargo-prebuilt-action",
   "description": "Install cargo prebuilt to a runner.",
-  "version": "3.2.0",
+  "version": "3.3.0",
   "author": "harmless-tech, cargo-prebuilt",
   "private": true,
   "homepage": "https://github.com/cargo-prebuilt/cargo-prebuilt-action",
@@ -66,6 +66,9 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@actions/core": "^1.10.1",
+    "@actions/exec": "^1.1.1",
+    "@actions/tool-cache": "^2.0.1",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
     "@types/node": "^20.11.20",
