--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "install-cargo-prebuilt-action",
-  "description": "Install cargo prebuilt to a runner.",
-  "version": "3.3.0",
+  "description": "Install cargo prebuilt to a runner and some packages if you want.",
+  "version": "3.3.1",
   "author": "harmless-tech, cargo-prebuilt",
   "private": true,
   "homepage": "https://github.com/cargo-prebuilt/cargo-prebuilt-action",
@@ -71,20 +71,20 @@
     "@actions/tool-cache": "^2.0.1",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.11.20",
+    "@types/node": "^20.11.30",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.0.2",
-    "@typescript-eslint/parser": "^7.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.3.1",
+    "@typescript-eslint/parser": "^7.3.1",
     "@vercel/ncc": "^0.38.1",
     "eslint": "^8.57.0",
-    "eslint-plugin-github": "^4.10.1",
+    "eslint-plugin-github": "^4.10.2",
     "eslint-plugin-jest": "^27.9.0",
-    "eslint-plugin-jsonc": "^2.13.0",
+    "eslint-plugin-jsonc": "^2.14.1",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
     "prettier": "3.2.5",
     "prettier-eslint": "^16.3.0",
     "ts-jest": "^29.1.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.2"
   }
 }
