--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "install-cargo-prebuilt-action",
   "description": "Install cargo prebuilt to a runner and some packages if you want.",
-  "version": "3.4.1",
+  "version": "3.4.2",
   "author": "harmless-tech, cargo-prebuilt",
   "private": true,
   "homepage": "https://github.com/cargo-prebuilt/cargo-prebuilt-action",
@@ -73,10 +73,10 @@
     "@types/jest": "^29.5.12",
     "@types/node": "^20.12.7",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.6.0",
-    "@typescript-eslint/parser": "^7.6.0",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
     "@vercel/ncc": "^0.38.1",
-    "eslint": "<=8",
+    "eslint": "<9",
     "eslint-plugin-github": "^4.10.2",
     "eslint-plugin-jest": "^28.2.0",
     "eslint-plugin-jsonc": "^2.15.1",
