--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -147,3 +147,20 @@ jobs:
           pkgs: just,rtx-cli@1.34.0,bacon@2.11.0
           target: aarch64-unknown-linux-musl
       - run: which just
+  test-next:
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          - os: ubuntu-latest
+          - os: macos-13
+          - os: macos-14
+          - os: windows-latest
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: actions/checkout@v4
+      - uses: ./
+        with:
+          prebuilt-version: 0.7.0-dev.0
+          prebuilt-verify: minisign
+          pkgs: just,bat,cargo-asm,zoxide
