--- a/action.yml
+++ b/action.yml
@@ -21,47 +21,68 @@ inputs:
   pkgs:
     description: 'A CSV list of prebuilt crates needed with optional version numbers (see cargo-prebuilt cli)'
     default: ''
+
   target:
     description: 'Target for the version of the tools to install'
     default: ''
-  index-key:
-    description: 'Index to use from the config file. 
-      Requires ci to be set to false if using'
+  safe:
+    description: 'Do not overwrite binaries that already exist'
+    default: ''
+  update:
+    description: 'Update packages based on binary hash'
     default: ''
   index:
-    description: 'Index to use to install tools from'
+    description: 'Index to use'
+    default: ''
+  pub-key:
+    description: 'A public verifying key encoded as base64. (Or a list of them using CSV).'
     default: ''
   auth:
-    description: 'Auth token for index if needed'
+    description: 'Auth token to use for private indexes'
     default: ''
-  config:
-    description: 'Path to config file to use. 
-      Requires ci to be set to false if using'
-    default: ''
-  path:
-    description: 'Path where prebuilt crates are installed'
-    default: ''
-  report-path:
-    description: 'Path where reports are installed'
+  index-key:
+    description: 'Index to use, pulling from config file'
     default: ''
   ci:
-    description: 'Use the --ci flag (On by default)'
+    description: 'Do not download reports, check for a config file, and ignore safe mode'
     default: 'true'
-  sig:
-    description: 'A public verifying key encoded as base64'
+  no-sig:
+    description: 'Do not verify downloaded info.jsons and hashes.jsons'
     default: ''
-  no-verify:
-    description: 'Do not verify downloaded files'
+  no-hash:
+    description: 'Do not verify downloaded archives'
     default: ''
-  safe:
-    description: 'Do not overwrite existing files'
+  hash-bins:
+    description: 'Hash and verify extracted binaries'
+    default: ''
+  path:
+    description: 'Path to the folder where downloaded binaries will be installed. (Default: $CARGO_HOME/bin)'
+    default: ''
+  report-path:
+    description: 'Path to the folder where the reports will be put (Default: See https://github.com/cargo-prebuilt/cargo-prebuilt/blob/main/docs/PATHS.md#reports)'
+    default: ''
+  no-create-path:
+    description: 'Do not create the report and/or bin folder if it is missing'
+    default: ''
+  reports:
+    description: 'Reports to be downloaded in a CSV format (Default: license) (See: See https://github.com/cargo-prebuilt/cargo-prebuilt/blob/main/docs/REPORT_TYPES.md)'
+    default: ''
+  config:
+    description: 'Path to the config file (Default: See https://github.com/cargo-prebuilt/cargo-prebuilt/blob/main/docs/PATHS.md#config)'
+    default: ''
+  require-config:
+    description: 'Require a config file to be used. (--ci will override this)'
     default: ''
   out:
-    description: 'Print out events (On by default)'
+    description: 'Output events'
     default: 'true'
-  color:
-    description: 'Enable or disable color'
+  get-latest:
+    description: 'Get latest versions of crates in index and then exit'
     default: ''
+  color:
+    description: 'Force color to be turned on or off'
+    default: 'true'
+
 outputs:
   prebuilt-version:
     description: 'Cargo prebuilt version that was installed'
