--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v3
+      - uses: pnpm/action-setup@v4
         name: Install pnpm
         with:
           version: ${{ env.PNPM_VERSION }}
@@ -161,6 +161,6 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./
         with:
-          prebuilt-version: 0.7.0-dev.0
+          prebuilt-version: 0.7.0-rc.0
           prebuilt-verify: minisign
           pkgs: just,bat,cargo-asm,zoxide
