--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     ]
   },
   "dependencies": {
-    "uuid": "^9.0.1"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@actions/core": "^1.10.1",
@@ -71,20 +71,20 @@
     "@actions/tool-cache": "^2.0.1",
     "@jest/globals": "^29.7.0",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20.12.12",
+    "@types/node": "^20.14.2",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.9.0",
-    "@typescript-eslint/parser": "^7.9.0",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
     "@vercel/ncc": "^0.38.1",
     "eslint": "<9",
-    "eslint-plugin-github": "^4.10.2",
-    "eslint-plugin-jest": "^28.5.0",
-    "eslint-plugin-jsonc": "^2.15.1",
+    "eslint-plugin-github": "5.0.1",
+    "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-prettier": "^5.1.3",
     "jest": "^29.7.0",
-    "prettier": "3.2.5",
+    "prettier": "3.3.2",
     "prettier-eslint": "^16.3.0",
-    "ts-jest": "^29.1.2",
+    "ts-jest": "^29.1.5",
     "typescript": "^5.4.5"
   }
 }
