--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "install-cargo-prebuilt-action",
   "description": "Install cargo prebuilt to a runner and some packages if you want.",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "author": "harmless-tech, cargo-prebuilt",
   "private": true,
   "homepage": "https://github.com/cargo-prebuilt/cargo-prebuilt-action",
@@ -62,21 +62,19 @@
       "./src/**"
     ]
   },
-  "dependencies": {
-    "uuid": "^10.0.0"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "@actions/core": "^1.10.1",
+    "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
     "@actions/tool-cache": "^2.0.1",
     "@jest/globals": "^29.7.0",
-    "@types/jest": "^29.5.13",
-    "@types/node": "^22.5.5",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.8.1",
     "@types/uuid": "^10.0.0",
-    "@typescript-eslint/eslint-plugin": "^8.6.0",
-    "@typescript-eslint/parser": "^8.6.0",
-    "@vercel/ncc": "^0.38.1",
-    "eslint": "^8.57.0",
+    "@typescript-eslint/eslint-plugin": "^8.11.0",
+    "@typescript-eslint/parser": "^8.11.0",
+    "@vercel/ncc": "^0.38.2",
+    "eslint": "<9",
     "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-jsonc": "^2.16.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -85,6 +83,6 @@
     "prettier": "^3.3.3",
     "prettier-eslint": "^16.3.0",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   }
 }
