--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "description": "Install cargo prebuilt to a runner and some packages if you want.",
   "version": "4.0.6",
   "author": "harmless-tech, cargo-prebuilt",
+  "type": "module",
   "private": true,
   "homepage": "https://github.com/cargo-prebuilt/cargo-prebuilt-action",
   "repository": {
@@ -25,62 +26,48 @@
   },
   "scripts": {
     "bundle": "pnpm run format:write && pnpm run package",
-    "format:write": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lint": "eslint . -c ./.github/linters/.eslintrc.yml",
-    "package": "ncc build src/index.ts --license licenses.txt",
-    "test": "jest",
+    "ci-test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 pnpm exec jest",
+    "format:write": "pnpm exec prettier --write .",
+    "format:check": "pnpm exec prettier --check .",
+    "lint": "pnpm exec eslint .",
+    "local-action": "pnpm exec @github/local-action . src/main.ts .env",
+    "package": "pnpm exec rollup --config rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "package:watch": "pnpm run package -- --watch",
+    "test": "NODE_OPTIONS=--experimental-vm-modules NODE_NO_WARNINGS=1 pnpm exec jest",
     "all": "pnpm run format:write && pnpm run lint && pnpm run test && pnpm run package"
   },
   "license": "MIT",
-  "jest": {
-    "preset": "ts-jest",
-    "verbose": true,
-    "clearMocks": true,
-    "testEnvironment": "node",
-    "moduleFileExtensions": [
-      "js",
-      "ts"
-    ],
-    "testMatch": [
-      "**/*.test.ts"
-    ],
-    "testPathIgnorePatterns": [
-      "/node_modules/",
-      "/dist/"
-    ],
-    "transform": {
-      "^.+\\.ts$": "ts-jest"
-    },
-    "coverageReporters": [
-      "json-summary",
-      "text",
-      "lcov"
-    ],
-    "collectCoverage": true,
-    "collectCoverageFrom": [
-      "./src/**"
-    ]
-  },
   "devDependencies": {
     "@actions/core": "^1.11.1",
     "@actions/exec": "^1.1.1",
     "@actions/tool-cache": "^2.0.2",
+    "@eslint/compat": "^1.3.1",
+    "@github/local-action": "^3.2.1",
     "@jest/globals": "^30.0.3",
+    "@rollup/plugin-commonjs": "^28.0.6",
+    "@rollup/plugin-node-resolve": "^16.0.1",
+    "@rollup/plugin-typescript": "^12.1.4",
     "@types/jest": "^30.0.0",
-    "@types/node": "^24.0.10",
+    "@types/node": "=20",
     "@typescript-eslint/eslint-plugin": "^8.35.1",
     "@typescript-eslint/parser": "^8.35.1",
-    "@vercel/ncc": "^0.38.3",
-    "eslint": "<9",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-import-resolver-typescript": "^4.4.4",
+    "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-jest": "^29.0.1",
-    "eslint-plugin-jsonc": "^2.20.1",
     "eslint-plugin-prettier": "^5.5.1",
+    "globals": "^16.3.0",
     "jest": "^30.0.3",
     "make-coverage-badge": "^1.2.0",
     "prettier": "^3.6.2",
     "prettier-eslint": "^16.4.2",
+    "rollup": "^4.44.1",
     "ts-jest": "^29.4.0",
+    "ts-jest-resolver": "^2.0.1",
     "typescript": "^5.8.3"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.44.1"
   }
 }
