--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     ".": "./dist/index.js"
   },
   "engines": {
-    "node": ">=20"
+    "node": ">=20",
+    "pnpm": ">=10"
   },
   "scripts": {
     "bundle": "pnpm run format:write && pnpm run package",
@@ -42,6 +43,7 @@
     "@actions/exec": "^1.1.1",
     "@actions/tool-cache": "^2.0.2",
     "@eslint/compat": "^1.3.1",
+    "@eslint/eslintrc": "^3.3.1",
     "@github/local-action": "^3.2.1",
     "@jest/globals": "^30.0.3",
     "@rollup/plugin-commonjs": "^28.0.6",
