--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -17,6 +17,9 @@ on:
 permissions:
   contents: read
 
+env:
+  PNPM_VERSION: latest
+
 jobs:
   check-dist:
     runs-on: ubuntu-latest
@@ -25,6 +28,8 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
       - name: Set Node.js
         uses: actions/setup-node@v4
         with:
