--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,9 @@ on:
 permissions:
   contents: read
 
+env:
+  PNPM_VERSION: latest
+
 jobs:
   build-test:
     runs-on: ubuntu-latest
@@ -20,6 +23,8 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
       - name: Set Node.js
         uses: actions/setup-node@v4
         with:
