--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -13,6 +13,9 @@ permissions:
   packages: read
   statuses: write
 
+env:
+  PNPM_VERSION: latest
+
 jobs:
   lint:
     name: Lint Codebase
@@ -27,6 +30,8 @@ jobs:
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
+        with:
+          version: ${{ env.PNPM_VERSION }}
       - name: Set Node.js
         uses: actions/setup-node@v4
         with:
