--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@actions/tool-cache": "^2.0.2",
     "@eslint/compat": "^1.3.1",
     "@eslint/eslintrc": "^3.3.1",
-    "@github/local-action": "^3.2.1",
+    "@eslint/js": "^9.30.1",
     "@jest/globals": "^30.0.3",
     "@rollup/plugin-commonjs": "^28.0.6",
     "@rollup/plugin-node-resolve": "^16.0.1",
