--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,19 +17,22 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-          - os: macos-13
           - os: macos-latest
           - os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: ./
       - run: cargo prebuilt just
       - run: just --version
   test-version: # make sure that the right version can be downloaded
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: ./
       - run: '[[ "$(cargo prebuilt --version)" != "" ]]'
       - uses: ./
@@ -39,7 +42,9 @@ jobs:
   test-linux-tools:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: ./
         with:
           pkgs: just,rtx-cli@1.34.0,bacon@2.11.0
@@ -48,20 +53,11 @@ jobs:
       - run: rtx --version
       - run: '[[ "$(bacon --version)" == "bacon 2.11.0" ]]'
   test-macos-tools:
-    runs-on: macos-13
-    steps:
-      - uses: actions/checkout@v4
-      - uses: ./
-        with:
-          pkgs: just,rtx-cli@1.34.0,bacon@2.11.0
-      - run: just --version
-      - run: which just
-      - run: rtx --version
-      - run: '[[ "$(bacon --version)" == "bacon 2.11.0" ]]'
-  test-macos-latest-tools:
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: ./
         with:
           pkgs: just,rtx-cli@1.34.0,bacon@2.11.0
@@ -72,7 +68,9 @@ jobs:
   test-windows-tools:
     runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: ./
         with:
           pkgs: just,bacon@2.11.0
@@ -84,7 +82,9 @@ jobs:
   test-dup:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: ./
         with:
           pkgs: just@1.14.0
@@ -101,12 +101,13 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-          - os: macos-13
           - os: macos-latest
           - os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: ./
         with:
           prebuilt-verify: minisign
@@ -114,7 +115,9 @@ jobs:
   test-target:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: ./
         with:
           pkgs: just,rtx-cli@1.34.0,bacon@2.11.0
@@ -126,14 +129,15 @@ jobs:
       matrix:
         include:
           - os: ubuntu-latest
-          - os: macos-13
           - os: macos-latest
           - os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@v5
+        with:
+          persist-credentials: false
       - uses: ./
         with:
-          prebuilt-version: 0.7.0-rc.0
+          prebuilt-version: '0.7.4'
           prebuilt-verify: minisign
           pkgs: just,bat,cargo-asm,zoxide
